; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_pointer_destroy.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_pointer_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seat_data = type { i64, i32* }

@WL_POINTER_RELEASE_SINCE_VERSION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seat_data*)* @pointer_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pointer_destroy(%struct.seat_data* %0) #0 {
  %2 = alloca %struct.seat_data*, align 8
  store %struct.seat_data* %0, %struct.seat_data** %2, align 8
  %3 = load %struct.seat_data*, %struct.seat_data** %2, align 8
  %4 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %27

8:                                                ; preds = %1
  %9 = load %struct.seat_data*, %struct.seat_data** %2, align 8
  %10 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @WL_POINTER_RELEASE_SINCE_VERSION, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %8
  %15 = load %struct.seat_data*, %struct.seat_data** %2, align 8
  %16 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @wl_pointer_release(i32* %17)
  br label %24

19:                                               ; preds = %8
  %20 = load %struct.seat_data*, %struct.seat_data** %2, align 8
  %21 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @wl_pointer_destroy(i32* %22)
  br label %24

24:                                               ; preds = %19, %14
  %25 = load %struct.seat_data*, %struct.seat_data** %2, align 8
  %26 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %25, i32 0, i32 1
  store i32* null, i32** %26, align 8
  br label %27

27:                                               ; preds = %24, %7
  ret void
}

declare dso_local i32 @wl_pointer_release(i32*) #1

declare dso_local i32 @wl_pointer_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
